--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@firebase/app": "^0.4.19",
     "@firebase/firestore": "^1.6.1",
+    "@zeit/next-css": "^1.0.1",
     "next": "9.1.1",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "react-image-lightbox": "^5.1.0"
   }
 }
