--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.3.1",
     "next": "9.1.1",
     "next-images": "^1.2.0",
+    "node-sass": "^4.13.0",
     "react": "16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "16.10.2",
     "react-image-lightbox": "^5.1.0",
-    "react-parallax": "^2.2.4"
+    "react-parallax": "^2.2.4",
+    "react-spring": "^8.0.27"
   }
 }
